[gd_scene load_steps=6 format=3 uid="uid://d1en0v7iianb2"]

[ext_resource type="Texture2D" uid="uid://clm3xo2vtogye" path="res://Assets/linkjoint_1.png" id="1_ekowp"]
[ext_resource type="Script" path="res://Game/LinkJoint.gd" id="1_qa6db"]
[ext_resource type="Texture2D" uid="uid://dfbtu8as6hxdf" path="res://Assets/light16.png" id="3_xfqkn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3pcqo"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jyejl"]
radius = 16.0

[node name="LinkJoint" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_qa6db")

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3pcqo")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(-8, 0)
rotation = 1.57079
texture = ExtResource("1_ekowp")

[node name="Light" type="PointLight2D" parent="."]
visible = false
color = Color(0, 1, 0, 1)
energy = 3.53
texture = ExtResource("3_xfqkn")

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]

[node name="Magnet" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Shape" type="CollisionShape2D" parent="Magnet"]
shape = SubResource("CircleShape2D_jyejl")
debug_color = Color(0.180392, 0.631373, 0.345098, 0.419608)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
